# insurance-vine-longitudinal

./: README.md  pyproject.toml
notebooks/: 01_dvine_longitudinal_demo.py
src/insurance_vine_longitudinal/: __init__.py  _copulas.py  _dvine.py  _marginals.py  _panel.py  _plot.py  _predict.py  _relativities.py
tests/: conftest.py  test_dvine.py  test_imports.py  test_marginals.py  test_panel.py  test_predict.py  test_relativities.py
