[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-vine-longitudinal"
version = "0.1.0"
description = "D-vine copula model for multi-year policyholder claim modelling"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Burning Cost", email = "pricing.frontier@gmail.com" }]
keywords = ["insurance", "copula", "vine", "longitudinal", "experience-rating", "actuarial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "statsmodels>=0.14.5",
]

[project.optional-dependencies]
accelerated = [
    "pyvinecopulib>=0.6.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_vine_longitudinal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
